--- a/fortnite-front-app/src/app/header/header.component.html
+++ b/fortnite-front-app/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <p>
     <mat-toolbar color="primary">
         <mat-toolbar-row>
-            <span [routerLink]="['/characters']">FORTNITE</span>
+            <span class="title" [routerLink]="['/']">FORTNITE</span>
             <span class="routes" [routerLink]="['/characters']">Personajes</span>
             <span class="routes" [routerLink]="['/newCharacter']">Nuevo Personaje</span>
         </mat-toolbar-row>
