--- a/fortnite-front-app/src/app/components/characters/characters.component.scss
+++ b/fortnite-front-app/src/app/components/characters/characters.component.scss
@@ -39,3 +39,12 @@ mat-card-content {
     padding-top: 10px;
     font-size: 20px;
 }
+
+button {
+    color: #000;
+    background: #f0ed07;
+    border: none;
+    padding: 8px;
+    font-size: 20px;
+    margin: 10px;
+}
