--- a/fortnite-front-app/src/app/components/update-character/update-character.component.html
+++ b/fortnite-front-app/src/app/components/update-character/update-character.component.html
@@ -18,12 +18,6 @@
           </div>
         </div>
         <div class="mb-3">
-          <label for="img" class="form-label">Ingrese la imagen de este personaje</label>
-          <input class="form-control" type="file" #imageFile
-          (change)="handleImgSelect($event)"
-           required/>
-        </div>
-        <div class="mb-3">
           <label for="season" class="form-label">Temporada</label>
           <select id="season" class="form-select" [(ngModel)]="character.season"
           name="season"
@@ -72,6 +66,6 @@
             Ingrese el arma principal de este personaje
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Registrar</button>
+        <button type="submit" class="btn btn-primary">Editar</button>
       </form>
 </body>
